force-app/main/default/objects/Scheduled_Call__c/Scheduled_Call__c.object-meta.xml
<CustomObject>
    <label>Scheduled Call</label>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>Scheduled Call Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>