force-app/main/default/objects/Scheduled_Call__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Scheduled Calls</relationshipLabel>
    <relationshipName>Scheduled_Calls1</relationshipName>
    <type>Lookup</type>
</CustomField>