force-app/main/default/objects/Scheduled_Call__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>CASE(Related_To__c,
&quot;Opportunity&quot;, Opportunity__r.Name,
&quot;Account&quot;, Account__r.Name,
&quot;Lead&quot;, Lead__r.FirstName + &quot; &quot; + Lead__r.LastName,
&quot;&quot;)</formula>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>