force-app/main/default/objects/Scheduled_Call__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Scheduled Calls</relationshipLabel>
    <relationshipName>Scheduled_Calls1</relationshipName>
    <type>Lookup</type>
</CustomField>