force-app/main/default/objects/Scheduled_Call__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <formula>CASE(Related_To__c,
					&quot;Opportunity&quot;, Opportunity__r.RW_Mobile_No__c, 
 				&quot;Account&quot;, Account__r.Mobile_No__c,
				 &quot;Lead&quot;, Lead__r.RW_Mobile_No__c,
				 null)</formula>
    <label>Mobile Number</label>
    <type>Text</type>
</CustomField>