force-app/main/default/objects/Scheduled_Call__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Scheduled Calls</relationshipLabel>
    <relationshipName>Scheduled_Calls1</relationshipName>
    <type>Lookup</type>
</CustomField>