force-app/main/default/objects/Scheduled_Call__c/fields/Ozonetel_Row_Id__c.field-meta.xml
<CustomField>
    <fullName>Ozonetel_Row_Id__c</fullName>
    <label>Ozonetel Row Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>