force-app/main/default/objects/Scheduled_Call__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <label>Related Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>